WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281825
[GTK] 2.46.1 WebCore::PlatformMediaSessionManager: undefined reference
https://bugs.webkit.org/show_bug.cgi?id=281825
Summary
[GTK] 2.46.1 WebCore::PlatformMediaSessionManager: undefined reference
Thomas Devoogdt
Reported
2024-10-19 08:44:26 PDT
/home/thomas/br-test-pkg/bootlin-x86-64-musl/host/opt/ext-toolchain/bin/../lib/gcc/x86_64-buildroot-linux-musl/13.3.0/../../../../x86_64-buildroot-linux-musl/bin/ld: Source/WebCore/CMakeFiles/WebCore.dir/./__/__/WebCore/DerivedSources/unified-sources/UnifiedSource-767013ce-8.cpp.o: in function `WebCore::Page::activeNowPlayingSessionUpdateTimerFired()': UnifiedSource-767013ce-8.cpp:(.text._ZN7WebCore4Page39activeNowPlayingSessionUpdateTimerFiredEv+0x9): undefined reference to `WebCore::PlatformMediaSessionManager::sharedManager()' /home/thomas/br-test-pkg/bootlin-x86-64-musl/host/opt/ext-toolchain/bin/../lib/gcc/x86_64-buildroot-linux-musl/13.3.0/../../../../x86_64-buildroot-linux-musl/bin/ld: Source/WebCore/CMakeFiles/WebCore.dir/./__/__/WebCore/DerivedSources/unified-sources/UnifiedSource-3c72abbe-17.cpp.o: in function `WebCore::PlatformMediaSessionManager::hasActiveNowPlayingSessionInGroup(WTF::ObjectIdentifierGeneric<WebCore::MediaSessionGroupIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long>, unsigned long, (WTF::SupportsObjectIdentifierNullState)1>)': UnifiedSource-3c72abbe-17.cpp:(.text._ZN7WebCore27PlatformMediaSessionManager33hasActiveNowPlayingSessionInGroupEN3WTF23ObjectIdentifierGenericINS_31MediaSessionGroupIdentifierTypeENS1_38ObjectIdentifierMainThreadAccessTraitsImEEmLNS1_33SupportsObjectIdentifierNullStateE1EEE+0x60): undefined reference to `WebCore::PlatformMediaSessionManager::forEachSessionInGroup(WTF::ObjectIdentifierGeneric<WebCore::MediaSessionGroupIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long>, unsigned long, (WTF::SupportsObjectIdentifierNullState)1>, WTF::Function<void (WebCore::PlatformMediaSession&)> const&)'
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2024-10-19 09:53:54 PDT
Committed
285473@main
(f47a18ab4977): <
https://commits.webkit.org/285473@main
> Reviewed commits have been landed. Closing PR #35491 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug