Cherry-pick 285473@main (f47a18ab4977). https://bugs.webkit.org/show_bug.cgi?id=281825

PlatformMediaSessionManager: fix compilation if VIDEO or WEB_AUDIO is not enabled
    https://bugs.webkit.org/show_bug.cgi?id=281825

    Reviewed by Philippe Normand.

    WebCore::Page::activeNowPlayingSessionUpdateTimerFired, and
    WebCore::PlatformMediaSessionManager::hasActiveNowPlayingSessionInGroup,
    are using methods from WebCore::PlatformMediaSessionManager.

    Canonical link: https://commits.webkit.org/285473@main

Canonical link: https://commits.webkit.org/282416.226@webkitglib/2.46